// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component test Header snapshot test should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#47bba5",
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "width": "100%",
      },
      {},
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessibilityLabel="header-text-title"
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#202020",
            "fontSize": 14,
            "fontWeight": "normal",
          },
          [
            {
              "color": "#FFFFFF",
              "fontSize": 18,
              "marginTop": 1,
            },
            {},
          ],
          undefined,
          undefined,
        ]
      }
      testID="header-text-title"
    >
      Header Title
    </Text>
  </View>
</View>
`;

exports[`Header component test Header with Subtitle snapshot test should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#47bba5",
        "flexDirection": "row",
        "height": 60,
        "justifyContent": "space-between",
        "paddingHorizontal": 20,
        "width": "100%",
      },
      {},
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <View>
      <Text
        accessibilityLabel="header-text-title"
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#202020",
              "fontSize": 14,
              "fontWeight": "normal",
            },
            [
              {
                "color": "#FFFFFF",
                "fontSize": 14,
                "marginTop": 1,
              },
              {},
            ],
            undefined,
            undefined,
          ]
        }
        testID="header-text-title"
      >
        Header Title
      </Text>
      <Text
        accessibilityLabel="header-text-subtitle"
        allowFontScaling={false}
        error={false}
        link={false}
        selectable={false}
        style={
          [
            {
              "color": "#202020",
              "fontSize": 14,
              "fontWeight": "normal",
            },
            {
              "color": "#FFFFFF",
              "marginTop": 1,
            },
            false,
            false,
          ]
        }
        testID="header-text-subtitle"
      >
        Header Subtitle
      </Text>
    </View>
  </View>
</View>
`;
